third_party/move/move-compiler-v2/tests/checking/typing/derefrence_invalid.exp

Diagnostics:
error: expected `bool` but found a value of type `u64`
  ┌─ tests/checking/typing/derefrence_invalid.move:6:10
  │
6 │         (*x : bool);
  │          ^^

error: expected `&u64` but found a value of type `u64`
  ┌─ tests/checking/typing/derefrence_invalid.move:7:10
  │
7 │         (*x_mut: &u64);
  │          ^^^^^^

error: expected `X` but found a value of type `S`
  ┌─ tests/checking/typing/derefrence_invalid.move:9:10
  │
9 │         (*s: X);
  │          ^^

error: expected `bool` but found a value of type `u64`
   ┌─ tests/checking/typing/derefrence_invalid.move:10:12
   │
10 │         (*&s.f: bool);
   │            ^^^

error: expected `&u64` but found a value of type `u64`
   ┌─ tests/checking/typing/derefrence_invalid.move:11:10
   │
11 │         (s.f: &u64);
   │          ^^^

error: expected `&X` but found a value of type `X`
   ┌─ tests/checking/typing/derefrence_invalid.move:12:12
   │
12 │         (*&s.x: &X);
   │            ^^^

error: cannot borrow from a reference
   ┌─ tests/checking/typing/derefrence_invalid.move:12:11
   │
12 │         (*&s.x: &X);
   │           ^^^^

error: expected `X` but found a value of type `S`
   ┌─ tests/checking/typing/derefrence_invalid.move:14:10
   │
14 │         (*s_mut: X);
   │          ^^^^^^

error: expected `bool` but found a value of type `u64`
   ┌─ tests/checking/typing/derefrence_invalid.move:15:12
   │
15 │         (*&s_mut.f: bool);
   │            ^^^^^^^

error: expected `(bool, u64)` but found a value of type `u64`
   ┌─ tests/checking/typing/derefrence_invalid.move:16:16
   │
16 │         (*&mut s_mut.f: (bool, u64));
   │                ^^^^^^^

error: cannot borrow a tuple
   ┌─ tests/checking/typing/derefrence_invalid.move:16:11
   │
16 │         (*&mut s_mut.f: (bool, u64));
   │           ^^^^^^^^^^^^

error: expected `&u64` but found a value of type `u64`
   ┌─ tests/checking/typing/derefrence_invalid.move:17:10
   │
17 │         (s_mut.f: &u64);
   │          ^^^^^^^

error: expected `(X, S)` but found a value of type `X`
   ┌─ tests/checking/typing/derefrence_invalid.move:18:12
   │
18 │         (*&s_mut.x: (X, S));
   │            ^^^^^^^

error: cannot borrow a tuple
   ┌─ tests/checking/typing/derefrence_invalid.move:18:11
   │
18 │         (*&s_mut.x: (X, S));
   │           ^^^^^^^^

error: expected expression with no value but found `X`
   ┌─ tests/checking/typing/derefrence_invalid.move:19:16
   │
19 │         (*&mut s_mut.x: ());
   │                ^^^^^^^

error: cannot borrow a tuple
   ┌─ tests/checking/typing/derefrence_invalid.move:19:11
   │
19 │         (*&mut s_mut.x: ());
   │           ^^^^^^^^^^^^
